# strange_attractors

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.cache/clangd/index/: 3DR.hpp.1F731351C7243A86.idx  3DRlinalg.cpp.98A297DB7AD6C452.idx  IMG.c.F42B1A27A7FA1E4F.idx  IMG_WIC.c.63E815F1CEC3076E.idx  IMG_avif.c.8628BC5640CF7A82.idx  IMG_bmp.c.5456951F458B2486.idx  IMG_gif.c.28360CF0E161C478.idx  IMG_jpg.c.CB82AA986A40B202.idx  IMG_jxl.c.829249312A68804F.idx  IMG_lbm.c.D25ECB46402F3460.idx  IMG_pcx.c.952483A7506D4A27.idx  IMG_png.c.86DE22DF74204C3D.idx  IMG_pnm.c.4F022D2D8E68160C.idx  IMG_qoi.c.B43E2AF5D23D2CB5.idx  IMG_stb.c.DB63BD3861DC2C5E.idx  IMG_svg.c.DF33211399515B7B.idx  IMG_tga.c.43246C3C9FC11DB3.idx  IMG_tif.c.EC249629410A1D1F.idx  IMG_webp.c.EBAB40ABE14185EF.idx  IMG_xcf.c.96F0961D87F159DD.idx  IMG_xpm.c.C443A83A71349449.idx  IMG_xv.c.00F40CE613DB413A.idx  SDL_gpu_textengine.c.D6164D58F69EF985.idx  SDL_hashtable.c.DF1E567EE4B4F08F.idx  SDL_hashtable.h.A56EB408029692C6.idx  SDL_hashtable_names.h.2E9BB1AEB3F53FBC.idx  SDL_hashtable_ttf.c.9B3930C52E685417.idx  SDL_hashtable_ttf.h.60A1B351E3C94070.idx  SDL_image.h.2935E4CC2033E327.idx  SDL_renderer_textengine.c.670FFCC5CCE2BFBF.idx  SDL_surface_textengine.c.F80E17AEDF176352.idx  SDL_textengine.h.729A9754DC91B646.idx  SDL_ttf.c.A9139423EDE51972.idx  SDL_ttf.h.54F4592B89881895.idx  attractorTypes.cpp.ADE3140F617EF1D0.idx  attractors.cpp.A2137C7BDA3B0F56.idx  attractors.hpp.C89D1F84F621DC43.idx  dynamicalsystems.cpp.91929F8003C213A2.idx  dynamicalsystems.hpp.9D1CAF898446020E.idx  miniz.h.829AD7516080C2C6.idx  (+6 more)
src/: 3DR.hpp  3DRlinalg.cpp  attractorTypes.cpp  attractors.cpp  attractors.hpp  dynamicalsystems.cpp  dynamicalsystems.hpp  gfx.cpp  lorenz.cpp  threads.cpp  threads.hpp  tinkerbell.cpp
